--- a/Demo/DrawBoard_Test.html
+++ b/Demo/DrawBoard_Test.html
@@ -149,7 +149,7 @@
       <div class="right-box">
         <div class="image-box-1">
           <img id="Result-0" src="./ImgResult/empty.png" alt="Image" >
-            <div class="overlay-1">Prob = 50%</div>
+            <div class="overlay-1" id="Prob-0">Prob = 50%</div>
           </img>
         </div>
 
@@ -157,17 +157,17 @@
         <div class="secondary-col" width="200">
           <div class="image-box-2">
             <img id="Result-1" src="./ImgResult/empty.png" alt="Image" >
-              <div class="overlay-2">Prob = 50%</div>
+              <div class="overlay-2" id="Prob-1">Prob = 50%</div>
             </img>
           </div>
           <div class="image-box-2">
             <img id="Result-2" src="./ImgResult/empty.png" alt="Image" >
-              <div class="overlay-2">Prob = 50%</div>
+              <div class="overlay-2" id="Prob-2">Prob = 50%</div>
             </img>
           </div>
           <div class="image-box-2">
             <img id="Result-3" src="./ImgResult/empty.png" alt="Image" >
-              <div class="overlay-2">Prob = 50%</div>
+              <div class="overlay-2" id="Prob-3">Prob = 50%</div>
             </img>
           </div>
         </div>
@@ -218,7 +218,9 @@
           // Clear the canvas
           ctx.clearRect(0, 0, canvas.width, canvas.height);
           let results = ["empty", "empty", "empty", "empty"];
+          let probs = ["0.0", "0.0", "0.0", "0.0"];
           changeResult(results);
+          changeProb(probs)
         }
 
         function submitImg() {
@@ -297,8 +299,10 @@
             .then((responseData) => {
               // Access and print the 'result' field from the response
               console.log(responseData.Result);
+              console.log(responseData.ResultProb);
 
               changeResult(responseData.Result);
+              changeProb(responseData.ResultProb)
               // return responseData.Result;
             })
             .catch((error) => {
@@ -322,6 +326,16 @@
 
             imageUrl = imageUrl + ".png"; // Replace with the new image URL
             image.src = imageUrl;
+          }
+        }
+
+        function changeProb(probArray) {
+          // ./ImgResult/empty.png
+          baseID = "Prob-";
+
+          for (let i = 0; i < 4; i++) {
+            var probWindow = document.getElementById(baseID + i);
+            probWindow.textContent = "Prob = "+ probArray[i] + "%";
           }
         }
       };
