--- a/Demo/DemoLocal.html
+++ b/Demo/DemoLocal.html
@@ -218,7 +218,7 @@
           <option value="Compressed">Compressed</option>
           <option value="Basic">Basic 100x100</option>
           <option value="Centered">Centered Img</option>
-          <option value="Onehot">Onehot Encoded</option>
+          <option value="Onehot" selected>Onehot Encoded</option>
         </select>
       </div>
       
